Changed the Start New Process to Start New Case

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -137,7 +137,7 @@
                 <span class="material-icons text-white text-sm">support_agent</span>
             </div>
             <div class="bg-slate-700 text-white p-3 rounded-lg rounded-tl-none max-w-xs">
-                <p class="text-sm">Hello! I'm here to help you with TaskMaster. How can I assist you today?</p>
+                <p class="text-sm">Hello! I'm here to help you with any Legal related question. How can I assist you today?</p>
                 <span class="text-xs text-slate-400 mt-1 block">Just now</span>
             </div>
         </div>
