--- a/src/main/resources/templates/userManagement/list.html
+++ b/src/main/resources/templates/userManagement/list.html
@@ -57,10 +57,10 @@
             <span class="bg-red-500/20 text-red-400 px-2 py-1 rounded-full text-xs font-semibold" th:text="${user.getStatus()}">Inactive</span>
           </td>
           <td class="py-3 px-2 md:py-4 md:px-3">
-            <a style="text-decoration:none" th:href="@{'/users/editUser/' + ${user.getId()}}">
+            <a style="text-decoration:none" th:href="@{'/users/editUser/' + ${user.getUserId()}}">
             <button class="text-gray-400 hover:text-white mr-2"><span class="material-icons">edit</span></button></a>
             <button
-                    th:attr="hx-get='/users/deleteUser/' + ${user.getId()}"
+                    th:attr="hx-get='/users/deleteUser/' + ${user.getUserId()}"
                     hx-confirm="Are you sure you want to delete this user?"
                     hx-target="closest tr"
                     hx-swap="outerHTML"
