Just update my local stack

--- a/src/main/resources/templates/form/edit.html
+++ b/src/main/resources/templates/form/edit.html
@@ -86,7 +86,7 @@
     <!-- Form Details -->
     <div style="margin-top:20px">
       <label class="form-label">Form Details</label>
-      <textarea th:field="*{formDetails}" required class="input-field" rows="6"></textarea>
+      <textarea th:field="*{formDetails}" class="input-field" rows="6"></textarea>
     </div>
 
     <!-- Form Interface (rich code editor) -->
