--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -49,8 +49,8 @@
                         id="file-tabs"
                 >
                     <div class="flex w-full">
-                    <button
-                            class="file-tab flex-1 text-center whitespace-nowrap py-2 px-2 sm:px-4 rounded-md font-medium text-xs sm:text-sm text-gray-400 hover:bg-gray-700 hover:text-white"                                data-tab="all"
+                        <button
+                                class="file-tab flex-1 text-center whitespace-nowrap py-2 px-2 sm:px-4 rounded-md font-medium text-xs sm:text-sm text-gray-400 hover:bg-gray-700 hover:text-white"                                data-tab="all"
                         >
                             All
                         </button>
@@ -107,6 +107,15 @@
                             <td class="py-4 px-6" th:text="${file.size}"></td>
                             <td class="py-4 px-6" th:text="${file.dateAdded}"></td>
                             <td class="py-4 px-6 text-right">
+
+                                <button
+                                        class="download-file-btn text-blue-500 hover:text-blue-700 p-2 rounded-full hover:bg-gray-600 mr-1"
+                                        th:attr="data-file-id=${file.id}, data-file-name=${file.name}"
+                                        title="Download file"
+                                >
+                                    <span class="material-icons">download</span>
+                                </button>
+
                                 <button
                                         class="delete-file-btn text-red-500 hover:text-red-700 p-2 rounded-full hover:bg-gray-600"
                                         th:attr="data-file-id=${file.id}, data-file-name=${file.name}"
@@ -134,7 +143,6 @@
                                 disabled
                         >
                             <span class="material-icons text-sm">chevron_left</span>
-                            Previous
                         </button>
 
                         <div id="pagination-numbers" class="flex items-center space-x-1">
@@ -145,7 +153,6 @@
                                 id="pagination-next"
                                 class="px-3 py-2 text-sm font-medium text-gray-400 bg-gray-800 border border-gray-600 rounded-lg hover:bg-gray-700 hover:text-white disabled:opacity-50 disabled:cursor-not-allowed"
                         >
-                            Next
                             <span class="material-icons text-sm">chevron_right</span>
                         </button>
                     </div>
